<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/drawer_add_auto"
            android:icon="@drawable/img_logo"
            android:title="@string/garage" />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/drawer_about_app"
                android:icon="@drawable/ic_about_app"
                android:title="@string/about_application" />
            <item
                android:id="@+id/drawer_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
