<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundCarView"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout style="@style/StandardTextInputTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_car_brand_et"
            style="@style/StandardEditTextTheme.CarView"
            android:drawableStart="@drawable/ic_car"
            android:hint="@string/car_brand_hint"/>
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/list_divider" />

    <android.support.design.widget.TextInputLayout style="@style/StandardTextInputTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_car_model_et"
            style="@style/StandardEditTextTheme.CarView"
            android:drawableStart="@drawable/ic_car"
            android:hint="@string/car_model_hint"/>
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/list_divider" />

    <android.support.design.widget.TextInputLayout style="@style/StandardTextInputTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_car_color_et"
            style="@style/StandardEditTextTheme.CarView"
            android:drawableStart="@drawable/ic_color"
            android:hint="@string/car_color_hint" />
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/list_divider" />

    <android.support.design.widget.TextInputLayout style="@style/StandardTextInputTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_car_year_issue_sp"
            style="@style/StandardEditTextTheme.CarView"
            android:drawableStart="@drawable/ic_calendar"
            android:hint="@string/car_year_issue_hint"/>
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/list_divider" />

    <android.support.design.widget.TextInputLayout style="@style/StandardTextInputTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_car_mileage_et"
            style="@style/StandardEditTextTheme.CarView"
            android:drawableStart="@drawable/ic_mileage"
            android:hint="@string/car_mileage_hint" />
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/list_divider" />

    <android.support.design.widget.TextInputLayout style="@style/StandardTextInputTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_car_fuel_type_sp"
            style="@style/StandardEditTextTheme.CarView"
            android:drawableStart="@drawable/ic_fuel"
            android:hint="@string/car_fuel_type_hint"/>

    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/list_divider" />

    <android.support.design.widget.TextInputLayout style="@style/StandardTextInputTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_purchase_date_et"
            style="@style/StandardEditTextTheme.CarView"
            android:drawableStart="@drawable/ic_calendar"
            android:hint="@string/car_purchase_date_hint"/>
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/list_divider" />

    <android.support.design.widget.TextInputLayout style="@style/StandardTextInputTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_car_number_et"
            style="@style/StandardEditTextTheme.CarView"
            android:drawableStart="@drawable/ic_car_number"
            android:hint="@string/car_number_hint" />
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/list_divider" />

    <android.support.design.widget.TextInputLayout style="@style/StandardTextInputTheme">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_car_vin_et"
            style="@style/StandardEditTextTheme.CarView"
            android:drawableStart="@drawable/ic_vin"
            android:hint="@string/car_vin_hint" />
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/list_divider" />
</LinearLayout>