<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    app:cardCornerRadius="4dp"
    android:elevation="4dp"
    android:foreground="?android:selectableItemBackground">

    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_item_car_selected"
            android:layout_width="8dp"
            android:layout_height="100dp"
            android:background="@color/colorNotSelected"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_item_car_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/img_def_car_photo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/civ_item_car_photo"
            android:layout_toRightOf="@+id/civ_item_car_photo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_name"
                android:textColor="@color/colorBackgroundSignIn"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_item_car_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_year_issue"
                android:textColor="@color/colorBackgroundAddAuto"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_item_car_mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_mileage_hint"
                android:textColor="@color/colorBackgroundAddAuto"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_arrow"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"/>


        <TextView
            android:id="@+id/tv_item_car_date_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_date_add"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/iv_item_car_selected"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorBackgroundAddAuto"
            android:textSize="12sp"
            android:textStyle="normal" />
    </RelativeLayout>
</android.support.v7.widget.CardView>
